<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsButton"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.10"
        android:columnCount="13"
        android:onClick="onClickHandler" >

        <ImageButton
            android:id="@+id/helpDialog"
            android:layout_column="4"
            android:layout_gravity="bottom|right"
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:background="@drawable/helpdialog"
            android:onClick="onClickHandler"
            android:src="@drawable/helpdialog" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_column="5"
            android:layout_gravity="bottom"
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:background="@drawable/ic_menu_name"
            android:clickable="true"
            android:onClick="onClickHandler"
            android:src="@drawable/ic_menu_name" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="238dp"
            android:layout_height="33dp"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_row="1"
            android:text="@string/addKw"
            android:textSize="18dip" />

        <EditText
            android:id="@+id/keywordText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_column="0"
            android:layout_columnSpan="6"
            android:layout_row="3"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/enterKeyword"
            android:layout_column="3"
            android:layout_columnSpan="2"
            android:layout_row="4"
            android:onClick="onClickHandler"
            android:text="@string/enter" />

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_row="5"
            android:text="Silence for all Events?"
            android:textSize="16dip" />

        <RadioButton
            android:id="@+id/rB_SilenceAll"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="7"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/rB_NoSilenceAll"
            android:layout_column="4"
            android:layout_gravity="left"
            android:layout_row="7"
            android:text="No" />

        <Button
            android:id="@+id/displayKeywords"
            android:layout_column="2"
            android:layout_columnSpan="4"
            android:layout_row="8"
            android:onClick="onClickHandler"
            android:text="@string/displayKw" />

        <Space
            android:layout_width="1dp"
            android:layout_height="21dp"
            android:layout_column="0"
            android:layout_row="0" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_row="2" />

        <Space
            android:layout_width="1dp"
            android:layout_height="74dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3" />

        <Space
            android:layout_width="21dp"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_row="0" />

        <Space
            android:layout_width="52dp"
            android:layout_height="1dp"
            android:layout_column="1"
            android:layout_row="0" />

        <Space
            android:layout_width="46dp"
            android:layout_height="1dp"
            android:layout_column="2"
            android:layout_row="0" />

        <Space
            android:layout_width="33dp"
            android:layout_height="1dp"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />

        <Space
            android:layout_width="105dp"
            android:layout_height="1dp"
            android:layout_column="4"
            android:layout_row="0" />

        <Space
            android:layout_width="115dp"
            android:layout_height="1dp"
            android:layout_column="5"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />

        <Space
            android:layout_width="1dp"
            android:layout_height="72dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6" />

        <Space
            android:layout_width="1dp"
            android:layout_height="189dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="7" />

        <Space
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="8" />
    </GridLayout>

</LinearLayout>